--- a/templates/Pages/karyawan/gaji/list.html
+++ b/templates/Pages/karyawan/gaji/list.html
@@ -85,14 +85,14 @@ Gaji Karyawan
                                             <td style="min-width: 200px;">{{ item[15] }}</td>
                                             <td style="min-width: 200px;">{{ item[16] }}</td>
                                             <td style="min-width: 200px;">{{ item[17] }}</td>
-                                            <td></td>
-                                            <td></td>
                                             <td style="min-width: 200px;">{{ item[18] }}</td>
                                             <td style="min-width: 200px;">{{ item[19] }}</td>
                                             <td style="min-width: 200px;">{{ item[20] }}</td>
                                             <td style="min-width: 200px;">{{ item[21] }}</td>
                                             <td style="min-width: 200px;">{{ item[22] }}</td>
                                             <td style="min-width: 200px;">{{ item[23] }}</td>
+                                            <td style="min-width: 200px;">{{ item[24] }}</td>
+                                            <td style="min-width: 200px;">{{ item[25] }}</td>
                                         </tr>
                                     {% endfor %}
                                 {% endif %}
